--- a/clinica-salomao/src/index.css
+++ b/clinica-salomao/src/index.css
@@ -1,5 +1,6 @@
 *{
   margin: 0;
+  
 }
 h1,h2,h3,h4,h5,p{
   margin: 0;
@@ -7,4 +8,5 @@ h1,h2,h3,h4,h5,p{
 }
 body{
   font-family: 'Belleza';
+  background-image: linear-gradient(to bottom, #FBE8CF, #C4B3A4 );
 }
