--- a/clinica-salomao/src/index.css
+++ b/clinica-salomao/src/index.css
@@ -1,12 +1,3 @@
-*{
-  margin: 0;
-  
-}
-h1,h2,h3,h4,h5,p{
-  margin: 0;
-  padding: 0;
-}
-body{
-  font-family: 'Belleza';
-  background-image: linear-gradient(to bottom, #FBE8CF, #C4B3A4 );
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
