iniciado logica tailwind para o header

--- a/clinica-salomao/src/index.css
+++ b/clinica-salomao/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+    font-family: 'Belleza'; /* Same font name used in the tailwind.config.js file */
+    src: url('./fonts/Belleza.ttf') format('truetype'); 
+    font-weight: normal;
+    font-style: normal;
+  }
